# order-weaver

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  order-weaver.txt  pyproject.toml
.github/workflows/: ci.yml
common/: __init__.py  config.py  db.py  events.py  kafka.py  logging.py  metrics.py  otel.py  topics.py
common/proto/common/: event_envelope_pb2.py
common/proto/inventory/: inventory_pb2.py
common/proto/orders/: orders_pb2.py
common/proto/payments/: payments_pb2.py
docs/: ROADMAP.md
docs/adr/: ADR-0001-architecture.md
proto/common/: event_envelope.proto
proto/inventory/: inventory.proto
proto/orders/: orders.proto
proto/payments/: payments.proto
requirements/: common.txt  dev.txt
scripts/: dev_full_check.ps1  gen_protos.ps1  gen_protos.sh
services/inventory/: Dockerfile
services/inventory/app/: main.py
services/orchestrator/: Dockerfile
services/orchestrator/app/: main.py
services/orders/: Dockerfile
services/orders/app/: main.py
services/payments/: Dockerfile
services/payments/app/: main.py
tests/: test_health.py
