[tool.black]
line-length = 100
target-version = ["py311"]
exclude = ["^common/proto/"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E","F","I","UP","B","SIM","ASYNC","Q"]
ignore = ["E203","E266","E501"]
exclude = ["common/proto/"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
exclude = ["common/proto/", ".venv/"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
