[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = "(^|/)common/proto/"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["common/proto/"]
 
[tool.ruff.lint]
select = ["E","F","I","UP","B","SIM","ASYNC","Q"]
ignore = ["E203","E266","E501"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
exclude = "(^|/)(common/proto/|\\.venv/|tests/)"

[[tool.mypy.overrides]]
module = [
  "aiokafka",
  "aiokafka.*",
  "google.protobuf",
  "google.protobuf.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "common.proto.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
  "services.orders.app.main",
  "services.payments.app.main",
  "services.inventory.app.main",
  "services.orchestrator.app.main",
]
disable_error_code = ["attr-defined"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
